--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "eslint": "8.12.0",
+    "eslint-config-next": "12.1.4",
     "prisma": "^3.12.0",
     "typescript": "4.5.5"
   }
